--- a/AWSKinesis/packages.config
+++ b/AWSKinesis/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="AWSSDK.Core" version="3.7.0.35" targetFramework="net461" />
+  <package id="AWSSDK.CloudWatch" version="3.7.2.5" targetFramework="net461" />
+  <package id="AWSSDK.Core" version="3.7.2.1" targetFramework="net461" />
   <package id="AWSSDK.KinesisVideo" version="3.7.0.33" targetFramework="net461" />
   <package id="AWSSDK.KinesisVideoArchivedMedia" version="3.7.0.33" targetFramework="net461" />
   <package id="AWSSDK.KinesisVideoMedia" version="3.7.0.33" targetFramework="net461" />
